redis/redis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-ingress
  namespace: oci
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: redis.shukawam.com
    http:
      paths:
      - backend:
          service:
            name: redis-master
            port:
              number: 6379
        path: /
        pathType: Prefix
