redis/redis-insight.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-insight
spec:
  selector:
    matchLabels:
      app: redis-insight
  template:
    metadata:
      labels:
        app: redis-insight
    spec:
      containers:
        - name: redis-insight
          image: redislabs/redisinsight:latest
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: redis-insight
spec:
  selector:
    app: redis-insight
  ports:
    - port: 8001
      targetPort: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-insight
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - redis-insight.shukawam.me
      secretName: shukawam-tls-secret-redis-insight
  rules:
    - host: redis-insight.shukawam.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-insight
                port:
                  number: 8001
