redis/redisinsight.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: redisinsight
  template:
    metadata:
      labels:
        app: redisinsight
    spec:
      containers:
        - name: redisinsight
          image: redislabs/redisinsight:latest
          ports:
            - containerPort: 8001
          volumeMounts:
            - name: db
              mountPath: /db
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: redisinsight-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: redisinsight
  namespace: monitoring
spec:
  selector:
    app: redisinsight
  ports:
    - port: 8001
      targetPort: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisinsight
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - redisinsight.shukawam.me
      secretName: shukawam-tls-secret-redisinsight
  rules:
    - host: redisinsight.shukawam.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redisinsight
                port:
                  number: 8001
